added routes for providing user info, getting available subscription tiers, and updating a users active subscription. Also updated openapi.yaml file to cover the new routes
